# deepgram-demos-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: dg-flux-release.yml  tts-tui-release.yml  velocity-release.yml
audio-recorder/: Cargo.toml  README.md
audio-recorder/src/: main.rs
dgpodcaster/: Cargo.toml  INSTRUCTIONS.md  README.md
dgpodcaster/src/: audio.rs  deepgram.rs  gemini.rs  main.rs  ui.rs
flux-turn-taking/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
flux-turn-taking/src/: main.rs
speech-to-text/: .env.example  CHANGELOG.md  Cargo.toml  README.md
speech-to-text/src/: main.rs  stream.rs  transcribe.rs
text-to-speech/: Cargo.toml  README.md
text-to-speech/src/: main.rs  stream.rs
tts-tui/: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  TESTPLAN.md
tts-tui/src/: app.rs  config.rs  main.rs  persistence.rs  sagemaker.rs  theme.rs  tts.rs  ui.rs
velocity/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  REMOTE_AUDIO_STREAMING.md  TESTPLAN.md  build.rs
velocity/Velocity.Settings/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  README.md  Velocity.Settings.csproj  app.manifest
velocity/Velocity.Settings/Models/: VelocityConfig.cs
velocity/Velocity.Settings/Services/: AudioInputService.cs  ConfigFileService.cs  DeepgramModelCatalog.cs
velocity/Velocity.Settings/ViewModels/: MainViewModel.cs
velocity/assets/: velocity.rc
velocity/deploy/scoop/: README.md  velocity.json
velocity/src/: api_key_dialog.rs  audio.rs  beep.rs  clipboard.rs  config.rs  deepgram.rs  flux.rs  focus_target.rs  history.rs  hotkey.rs  logger.rs  main.rs  output.rs  remote_audio.rs  settings.rs  sidecar_ui.rs  single_instance.rs  startup.rs  state.rs  streaming.rs  transcribe.rs  tray.rs  typer.rs  vad.rs
voice-agent/: .env.example  CHANGELOG.md  Cargo.toml  README.md
voice-agent/src/: main.rs
