[workspace]
members = [
  "audio-recorder",
  "dgpodcaster",
  "flux-turn-taking",
  "speech-to-text",
  "text-to-speech",
  "tts-tui",
  "voice-agent",
  "velocity",
]
resolver = "3"

[patch.crates-io]
xcb = { git = "https://github.com/rust-x-bindings/rust-xcb", rev = "8f1a726abc8cb9f62169d0032a94e268fc3379af" }
