[package]
name = "rust-flux"
version = "0.1.0"
edition = "2024"
default-run = "rust-flux"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
cpal = "0.16.0"
url = "2.4"
env_logger = "0.11.8"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
tabled = "0.17"
