[package]
name = "dg-flux"
version = "0.2.0"
edition = "2024"
default-run = "dg-flux"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
cpal = "0.17.1"
url = "2"
env_logger = "0.11.8"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
tabled = "0.17"
symphonia = { version = "0.5", features = ["all"] }
