[package]
name = "dg-stt"
version = "0.1.0"
edition = "2024"
default-run = "dg-stt"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"
base64 = "0.22.1"
cpal = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
async-trait = "0.1"
dotenv = "0.15"
bytes = "1"
