[package]
name = "dg-stt"
version = "0.3.0"
edition = "2024"
default-run = "dg-stt"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"
base64 = "0.22.1"
cpal = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
async-trait = "0.1"
dotenv = "0.15"
bytes = "1"
clap = { version = "4.5", features = ["derive"] }
symphonia = { version = "0.5", features = ["mp3", "wav", "flac", "aac", "isomp4", "ogg", "vorbis", "mkv", "alac"] }
urlencoding = "2.1"
indicatif = "0.17"
reqwest = { version = "0.13.1", features = ["json"] }
