[package]
name = "dg-tts"
version = "0.2.5"
edition = "2024"
default-run = "dg-tts"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
rodio = "0.21.1"
base64 = "0.22.1"
urlencoding = "2.1.3"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
