[package]
name = "tts-tui"
version = "0.5.0"
edition = "2021" # Use 2021 edition
description = "A terminal user interface for Deepgram Text-to-Speech API with voice selection, text and voice filtering, color themes, multi-format audio output, sample rate control, playback speed control, and audio caching"

[dependencies]
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["events", "serde"] }
# reqwest needs `json` and `rustls-tls` or `native-tls`. For simplicity, I'll use `native-tls` here.
# For async operations, we need to use the `tokio` runtime.
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls" ], default-features = false }
tokio = { version = "1.49.0", features = ["full"] }
rodio = "0.20"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.111"
dotenvy = "0.15.7"
directories = "6.0.0"
sha2 = "0.10.8"
anyhow = "1.0.81"
url = "2.5.0"
async-trait = "0.1.77"
base64 = "0.22.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
lazy_static = "1.4.0"
arboard = "3.4.0"
clap = { version = "4.0", features = ["derive", "env"] }
rust_decimal = "1.36"
mp3-duration = "0.1.10"
claxon = "0.4"
toml = "0.8"
chrono = "0.4"
