[package]
name = "velocity"
version = "0.2.0"
edition = "2024"
description = "Windows 11 voice dictation using Deepgram Voice AI."

[[bin]]
name = "velocity"
path = "src/main.rs"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Gdi",
    "Win32_Security",
] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.13", features = ["blocking"] }
tungstenite = { version = "0.29", features = ["native-tls"] }
hound = "3"
minimp3 = "0.6"
png = "0.18"

[profile.release]
lto = true
opt-level = "s"
