[package]
name = "voice-agent"
version = "0.2.0"
edition = "2021"
description = "A Deepgram Voice Agent client for real-time bidirectional voice conversation via WebSocket"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
url = "2.5"
futures-util = "0.3"
cpal = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
bytes = "1"
base64 = "0.22.1"
log = "0.4"
env_logger = "0.11.8"
rodio = "0.21.1"
clap = { version = "4.0", features = ["derive"] }
